--- a/app/javascript/application.css
+++ b/app/javascript/application.css
@@ -9,3 +9,6 @@
 @import './stylesheets/layout.css';
 @import './stylesheets/typography.css';
 @import './stylesheets/buttons.css';
+@import './stylesheets/benefits.css';
+@import './stylesheets/contributing_options.css';
+@import './stylesheets/hall_of_fame.css';
