Convert benefits stylesheet to Tailwind

--- a/app/javascript/stylesheets/benefits.css
+++ b/app/javascript/stylesheets/benefits.css
@@ -1,4 +1,29 @@
-.benefits {
+@layer components {
+  .benefits {
+    @apply bg-gray-100 py-16;
+  }
+
+  .benefits__title {
+    @apply text-gold font-bold text-center pb-16 mb-0;
+  }
+
+  .benefit {
+    @apply flex items-start mb-14;
+  }
+
+  .benefit__image {
+    @apply mr-8;
+  }
+
+  .benefit__title {
+    @apply text-gold font-bold mb-6;
+  }
+  /* REVIEW: have left out media query for now as I think it looks better without it. */
+}
+
+
+
+/* .benefits {
   background-color: $white-smoke;
   padding-top: 70px;
   padding-bottom: 70px;
@@ -36,4 +61,4 @@
       margin-bottom: 20px;
     }
   }
-}
+} */
