Feature: Refactor Lesson Table of Contents to a Stimulus JS
Because:
* Our old table of contents behaviour had a dependency on ScrollSpy - a Bootstrap utility.
* We want to move all of our JavaScript out of scripts and into Stimulus JS controllers.

This commit:
* Change style pf toc to be more natural - no more circles or uppercase letters.
* Add lesson toc Stimulus controller which:
  * Builds the toc
  * Handles the active scrolling sections using intersection observer.
* Add title to lesson toc aside to make it clearer what it is at a glance.
* Show all top level h3 headings from the lesson content in the toc instead of filtering and displaying only the common lesson headings.

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -4,15 +4,18 @@
 
   <%= render 'lessons/header', lesson: @lesson %>
 
-  <main class="grid grid-cols-12 gap-x-6">
+  <main class="grid grid-cols-12 gap-x-6" data-controller="lesson-toc" data-lesson-toc-item-classes-value="no-underline">
     <article class="col-span-full xl:col-span-8 xl:col-start-2">
-      <div class="lesson-content max-w-prose mx-auto xl:mx-0 text-lg" data-controller="syntax-highlighting">
+      <div class="lesson-content max-w-prose mx-auto xl:mx-0 text-lg" data-controller="syntax-highlighting" data-lesson-toc-target="lessonContent">
         <%= @lesson.content.html_safe %>
       </div>
     </article>
 
-     <aside class="col-span-4 col-start-10 hidden xl:block">
-      <div class="sticky top-12 pb-20 lesson-navigation"></div>
+    <aside class="col-span-4 col-start-10 hidden xl:block">
+      <div class="sticky top-12 pb-20">
+        <h4 class="text-xl font-semibold pb-4 text-gray-500 odin-dark-light-gray-font">In this lesson</h4>
+        <ul class="flex flex-col space-y-3 text-gray-500" data-lesson-toc-target="toc"></ul>
+      </div>
     </aside>
   </main>
 </div>
