--- a/app/assets/stylesheets/dark-mode.css
+++ b/app/assets/stylesheets/dark-mode.css
@@ -5,6 +5,7 @@
   --dark-header-color: #D7DADC;
   --dark-pseudocode-color: #e83e8c;
   --dark-input-bg-color: #313131;
+  --dark-font-light-gray-color: #9CA3AF;
 }
 
 .section-lessons__item__link:hover,
@@ -148,4 +149,16 @@ pre:not(.line-numbers) code {
 
 .skill__sub-title {
   color: var(--dark-font-color) !important;
+}
+
+[data-lesson-toc-target="toc"] li {
+  color: var(--dark-font-light-gray-color) !important;
+}
+
+[data-lesson-toc-target="toc"] li.toc-item-active {
+  color: var(--dark-font-color) !important;
+}
+
+.odin-dark-light-gray-font {
+  color: var(--dark-font-light-gray-color) !important;
 }
