--- a/app/javascript/stylesheets/typography.css
+++ b/app/javascript/stylesheets/typography.css
@@ -10,4 +10,8 @@
   p {
     @apply text-gray-500 text-lg tracking-wide;
   }
+
+  .toc-item-active {
+    @apply text-gray-700 font-medium;
+  }
 }
